--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# C development files
+tempCodeRunnerFile*
+
+# Test files and directory
+/test-mappe
+output.plt
